--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -17,6 +17,7 @@
 
 今年6月，该名受害女生上海财经大学会计学院正式录取为会计硕士，钱某为“财务会计前置课程”任课老师。第一堂课后，钱某主动添加了该名女生微信，一开始是“.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 5:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/6/n11706071.md#1" target="_blank">大陆前体操冠军张尚武生活无着 因偷窃入狱</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/6/n11706071.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/zhangshangwu-150x120.jpg" align ="left"></a>大陆多家媒体披露，世界体操冠军张尚武因为扒窃，已经再度入狱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 2:23 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/11/n11715794.md#1" target="_blank">台旅行社勾结人头协会 5千陆公务员非法来台</a><br></h3>?国安恐再现漏洞？台北地检署指出，新北市水资源经济发展协会等12个机构，涉嫌勾结20余家非甲种旅行社业者，假造短期专业交流文件，协助5千名中国公务人员及其亲友来台，但实际目的尚在调查中；刑事局今日（11日）兵分5路搜索，并约谈相关10人，预计晚间移送复讯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11713953.md#1" target="_blank">关押两名加国人一年后 中共称其被审查和起诉</a><br></h3>中共当局最近明里暗里威胁西方国家，很快会以危及中共国家安全罪名，对被其关押的两名加拿大公民——加拿大前外交官康明凯（Michael Kovrig） 和加拿大商人斯帕沃尔（Michael Spavor）进行审判。外界一致认为，中共这么做，是向加拿大施压释放华为高管孟晚舟。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:06 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11713224.md#1" target="_blank">视觉中国再遭中共网信办约谈 被迫暂停服务</a><br></h3>12月10日，大陆图片网站视觉中国（域名 vcg.com）、IC photo（域名 dfic.cn）均被中共要求暂停服务，进行整改，理由是与大陆外的企业进行互联网新闻信息服务业务的合作等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 7:06 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/10/n11712332.md#1" target="_blank">每日三退声明精选（2019/12/09）</a><br></h3>我是建筑商，今年承包了一个政府工程，在外县施工。在承揽工程及施工过程中亲身体会中共的腐败。管工程的要钱，管品质的勒索，管安全的勒索。。。怎么反腐都照贪不误。真是百炼成贪的邪教。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 11:35 AM							</td></tr>
@@ -32,6 +33,5 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/7/n11706777.md#1" target="_blank">每日三退声明精选（2019/12/06）</a><br></h3>我是一位居住于四川的农民，曾经经历过土改，大跃进，等疯狂的红色运动，曾经被打为地富反坏右，被多人围殴，游街示众，后来虽然进行了平反，但多年内心一直过不了这个坎，总觉得又气又怕。今年是个多事之年，大事件的接连发生表明共产党体制的摇摇欲坠，希望在我有生之年能看见邪党倒台，感谢大纪元给了我一个吐露自己心声的机会，我在这里自愿宣布退出中国共产党的一切组织机构，三退保.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 12:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/7/n11706646.md#1" target="_blank">河南20岁女大学生失踪5日 男同事承认杀人</a><br></h3>河南洛阳20岁的女大学生狄含笑失踪多日后，目前，其兼职的男同事李某已承认将她杀害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 12:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/6/n11705391.md#1" target="_blank">赴白宫见川普 郭台铭：谈美中贸易与经济</a><br></h3>鸿海创办人郭台铭与太太曾馨莹在美东时间5日傍晚参加白宫耶诞派对，入场前说，今天是参加派对的心情，不愿谈台湾政治。在会后受访时表示，有见到美国总统川普，对于谈话内容“还是保密”，但透露听了一些川普对于经济、中美贸易、鸿海在美国投资等议题的看法。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 10:10 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/6/n11704422.md#1" target="_blank">石家庄一中学教练被家长刺死 曾是省男排主力</a><br></h3>近日，石家庄一所重点中学的男排主教练、前河北男排主力二传手马某，被一位队员家长杀害。初步调查，原因是该家长与马某在对孩子训练问题产生矛盾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 1:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_2.md#1<br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_2.htm">http://www.epochtimes.com/gb/ncid282_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
